# watch-automation-control-hub

./: .gitignore  README.md  WATCH.ps1  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml  release-verification.yml  release.yml  v1-release-validation.yml
docs/: architecture.md  gui-refurbishment.md  live-collector-demo.md  m1-status.md  roadmap.md  safety-boundaries.md  v1-manual-release-checklist.md  v1-readiness.md  visibility-trust-security-product.md  windows-task-scheduler.md
docs/examples/: deterministic-operational-report.md  example-com-live-report.md
docs/releases/: v0.1.0.md  v1.0.0.md
samples/: demo-input.json
scripts/: build-readiness-report.py  export-review.ps1  invoke-scheduled-run.ps1  plan-due.ps1  prepare-ui-demo.py  run-api.ps1  run-demo.ps1  run-due-once.ps1  sanitize-live-report.py  setup.ps1  task-scheduler.ps1  verify-release.sh  verify-ui.py  verify-v1-human-review.py  verify.ps1
src/watch/: __init__.py  actions.py  analysis.py  api.py  attempt_api.py  attempt_web.py  attempts.py  change_timeline.py  changes.py  cli.py  collectors.py  dashboard_web.py  models.py  occurrences.py  one_shot_runner.py  readiness.py  refined_web.py  reports.py  retries.py  runner.py  runner_api.py  schedules.py  storage.py  target_detail.py  targets.py  tls.py  web.py  web_layout.py  webapp.py  workflow.py
tests/: test_api.py  test_attempt_api.py  test_attempt_web.py  test_attempts.py  test_collectors.py  test_evidence_metadata.py  test_gui_foundation.py  test_occurrence_attention.py  test_occurrence_execution.py  test_occurrences.py  test_one_shot_cli.py  test_one_shot_runner.py  test_readiness.py  test_retries.py  test_runner.py  test_runner_interfaces.py  test_sanitize_live_report.py  test_tls.py  test_watch.py  test_web.py
