[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watch-automation-control-hub"
version = "0.3.0"
description = "Local-first workflow automation and technical control workbench"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Rafael Alba"}]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<3",
  "playwright>=1.52,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
watch = "watch.cli:app"
watch-api = "watch.webapp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watch"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=watch --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["watch"]
